@@ -1,6 +1,5 @@
 plugins {
   id 'application'
-  id 'checkstyle'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -8,15 +7,24 @@ plugins {
   id 'org.owasp.dependencycheck' version '6.1.5'
   id 'com.github.ben-manes.versions' version '0.38.0'
   id 'org.sonarqube' version '3.2.0'
+  id 'uk.gov.hmcts.java' version '0.12.2'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+sourceCompatibility = 11
+targetCompatibility = 11
+
+configurations {
+  providedRuntime
+  annotationProcessor
+  aatCompile.extendsFrom(testCompile)
+  aatRuntime.extendsFrom(testRuntime)
+  cucumberRuntime.extendsFrom(functionalRuntime)
 }
+
 
 sourceSets {
   functionalTest {
@@ -60,14 +68,47 @@ tasks.withType(Test) {
 }
 
 test {
+  generateCucumberReports.enabled = false
   failFast = true
 }
 
 task functional(type: Test) {
-  description = "Runs functional tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
+  description = 'Executes functional tests against an the HMC HMI Outbound Adapter API instance just deployed'
+  dependsOn functionalTestClasses
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/aat/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  doFirst {
+    generateCucumberReports.enabled = true
+    javaexec {
+      main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
+      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = [
+        '--threads', '10',
+        '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--tags', 'not @Ignore',
+        '--glue', 'uk.gov.hmcts.befta.player',
+        '--glue', 'uk.gov.hmcts.hmc.hmi.befta', 'src/aat/resources/features'
+      ]
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Functional Tests/"
+        new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))
+        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
+      }
+    }
+  }
+  outputs.upToDateWhen { false }
 }
 
 task integration(type: Test) {
@@ -79,15 +120,38 @@ task integration(type: Test) {
 }
 
 task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
-}
+  description = 'Executes smoke tests against an the HMC HMI Outbound Adapter API instance just deployed'
+  dependsOn functionalTestClasses
 
-checkstyle {
-  maxWarnings = 0
-  toolVersion = '8.29'
-  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/aat/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  doLast {
+    generateCucumberReports.enabled = true
+    javaexec {
+      main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
+      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+      args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke and not @Ignore', '--glue',
+              'uk.gov.hmcts.befta.player', '--glue', "uk.gov.hmcts.hmc.hmi.befta", 'src/aat/resources/features']
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+  }
+
+  finalizedBy {
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Smoke Tests/"
+        new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))
+        logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
 }
 
 pmd {
@@ -112,8 +176,8 @@ project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: spring-boot-template"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
+    property "sonar.projectName", "Reform :: hmc-hmi-outbound-adapter"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:hmc-hmi-outbound-adapter"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
 }
@@ -130,18 +194,20 @@ dependencyUpdates {
   }
 }
 
-// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
-  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-  // range of 0-10 fails the build, anything greater and it doesn't fail the build
-  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
   suppressionFile = 'config/owasp/suppressions.xml'
-
-  analyzers {
-    // Disable scanning of .NET related binaries
-    assemblyEnabled = false
-  }
 }
+
+def versions = [
+  junit           : '5.7.1',
+  junitPlatform   : '1.7.1',
+  junitVintageVersion : '5.5.2',
+  reformLogging   : '5.1.7',
+  lombok          : '1.18.8',
+  springBoot      : springBoot.class.package.implementationVersion,
+  springfoxSwagger: '3.0.0'
+]
+
 
 dependencyManagement {
   dependencies {
@@ -150,22 +216,28 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
       entry 'guava'
     }
+    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.43') {
+      entry 'tomcat-embed-core'
+      entry 'tomcat-embed-el'
+      entry 'tomcat-embed-websocket'
+    }
   }
+}
+
+cucumberReports {
+  outputDir = file("${projectDir}/target/cucumber")
+  reports = files("${projectDir}/target/cucumber.json")
+  notFailingStatuses = ["skipped", "passed"]
 }
 
 repositories {
   mavenLocal()
+  maven {
+    url "https://jitpack.io"
+  }
   mavenCentral()
   jcenter()
 }
-
-def versions = [
-  junit           : '5.7.1',
-  junitPlatform   : '1.7.1',
-  reformLogging   : '5.1.7',
-  springBoot      : springBoot.class.package.implementationVersion,
-  springfoxSwagger: '3.0.0'
-]
 
 ext.libraries = [
   junit5: [
@@ -173,7 +245,9 @@ ext.libraries = [
     "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
     "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
     "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
+    "org.junit.vintage:junit-vintage-engine:${versions.junitVintageVersion}"
   ]
 ]
 
@@ -187,13 +261,9 @@ dependencies {
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
 
-  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
-
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.0.5'
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.5'
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -205,15 +275,18 @@ dependencies {
   integrationTestImplementation sourceSets.test.runtimeClasspath
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+  functionalTestImplementation libraries.junit5
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
+  implementation 'junit:junit:4.12'
 }
 
-mainClassName = 'uk.gov.hmcts.reform.demo.Application'
+mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
 
 bootJar {
   getArchiveFileName().set(provider {
-    'spring-boot-template.jar'
+    'hmc-hmi-outbound-adapter.jar'
   })
 
   manifest {
